Second Commit Functional
Co-authored-by: Copilot <copilot@github.com>